modifique el parrafo de la rama master

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>GIT Y VSCODE</h1>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reiciendis tempore ut porro perferendis illo incidunt ipsum minima, voluptatem repellendus nam? Eum quidem tenetur ducimus harum incidunt earum, veritatis exercitationem esse.</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reiciendis tempore ut porro perferendis illo incidunt ipsum minima, voluptatem repellendus nam? Eum quidem tenetur ducimus harum incidunt earum, 222222222 exercitationem esse.</p>
 </body>
 </html>
